src/codegen/snapshots/hebi__codegen__tests__print_field.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
v := { a: 0 }
print v.a
v.a = 1


# Func:
function `main` (registers: 3, length: 28, constants: 2)
.code
  0  | load_const [0]; a
  2  | store r1
  4  | load_smi 0
  6  | store r2
  8  | make_table r1, 1
  11 | store_global [1]; v
  13 | load_global [1]; v
  15 | load_field [0]; a
  17 | print
  18 | load_global [1]; v
  20 | store r1
  22 | load_smi 1
  24 | store_field r1, [0]; a
  27 | return




