src/codegen/snapshots/hebi__codegen__tests__print_field_opt.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
v := {}
print ?v.a
print ?v.a.b.c


# Func:
function `main` (registers: 1, length: 18, constants: 4)
.code
  0  | make_table_empty
  1  | store_global [0]; v
  3  | load_global [0]; v
  5  | load_field_opt [1]; a
  7  | print
  8  | load_global [0]; v
  10 | load_field_opt [1]; a
  12 | load_field_opt [3]; b
  14 | load_field_opt [2]; c
  16 | print
  17 | return




