src/codegen/snapshots/hebi__codegen__tests__print_global.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
v := 0
print v


# Func:
function `main` (registers: 1, length: 8, constants: 1)
.code
  0 | load_smi 0
  2 | store_global [0]; v
  4 | load_global [0]; v
  6 | print
  7 | return




