src/codegen/snapshots/hebi__codegen__tests__print_index.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
v := { a: 0 }
print v["a"]
v["a"] = 1


# Func:
function `main` (registers: 3, length: 36, constants: 2)
.code
  0  | load_const [0]; a
  2  | store r1
  4  | load_smi 0
  6  | store r2
  8  | make_table r1, 1
  11 | store_global [1]; v
  13 | load_global [1]; v
  15 | store r1
  17 | load_const [0]; a
  19 | load_index r1
  21 | print
  22 | load_global [1]; v
  24 | store r1
  26 | load_const [0]; a
  28 | store r2
  30 | load_smi 1
  32 | store_index r1, r2
  35 | return




